--- a/cat-site/style/transforms/language/da.xml
+++ b/cat-site/style/transforms/language/da.xml
@@ -80,6 +80,33 @@
     <december>Dec.</december>
     
     
+    <!-- Units -->
+    <unit_byte>byte</unit_byte>
+    <unit_char>tegn</unit_char>
+    <unit_cm>cm</unit_cm>
+    <unit_in>inch</unit_in>
+    <unit_issue>nr.</unit_issue>
+    <unit_mm>mm</unit_mm>
+    <unit_page>side</unit_page>
+    <unit_pc>pica</unit_pc>
+    <unit_pt>point</unit_pt>
+    <unit_px>pixel</unit_px>
+    <unit_record>post</unit_record>
+    <unit_vol>bd.</unit_vol>
+    <unit_vu>MEI virtuel enhed</unit_vu>
+    
+    
+    <!-- Keys / modes -->
+    <major>-dur</major>
+    <minor>-mol</minor>
+    <dorian>dorisk</dorian>
+    <phrygian>frygisk</phrygian>
+    <lydian>lydisk</lydian>
+    <mixolydian>mixolydisk</mixolydian>
+    <aeolian>æolisk</aeolian>
+    <locrian>lokrisk</locrian>
+    
+        
     <!-- User interface texts -->
     <hide_alt_lang>Skjul andre sprog</hide_alt_lang>
     <show_alt_lang>Vis andre sprog</show_alt_lang>
