--- a/cat-site/style/transforms/language/de.xml
+++ b/cat-site/style/transforms/language/de.xml
@@ -80,10 +80,38 @@
     <december>Dez.</december>
     
     
+    <!-- Units -->
+    <unit_byte>Byte</unit_byte>
+    <unit_char>Zeichen</unit_char>
+    <unit_cm>cm</unit_cm>
+    <unit_in>Inch</unit_in>
+    <unit_issue>Nr.</unit_issue>
+    <unit_mm>mm</unit_mm>
+    <unit_page>Seite</unit_page>
+    <unit_pc>Pica</unit_pc>
+    <unit_pt>Point</unit_pt>
+    <unit_px>Pixel</unit_px>
+    <unit_record>Datensatz</unit_record>
+    <unit_vol>Bd.</unit_vol>
+    <unit_vu>MEI virtuelle Einheit</unit_vu>
+    
+    
+    <!-- Keys / modes -->
+    <major>-Dur</major>
+    <minor>-Moll</minor>
+    <dorian>dorisch</dorian>
+    <phrygian>frygisch</phrygian>
+    <lydian>lydisch</lydian>
+    <mixolydian>mixolydisch</mixolydian>
+    <aeolian>aeolisch</aeolian>
+    <locrian>locrisch</locrian>
+    
+    
     <!-- User interface texts --> 
     <hide_alt_lang>Verberge alternative Ausgabesprache(n)</hide_alt_lang>
     <show_alt_lang>Zeige alternative Ausgabesprache(n)</show_alt_lang>
-    
+
+
     <!-- FRBR relation labels -->    
     <hasAbridgement>wurde verkürzt in</hasAbridgement>
     <isAbridgementOf>Auszug oder Kurzfassung von</isAbridgementOf>
