--- a/cat-site/style/transforms/language/en.xml
+++ b/cat-site/style/transforms/language/en.xml
@@ -80,6 +80,33 @@
     <december>Dec.</december>
     
     
+    <!-- Units -->
+    <unit_byte>byte</unit_byte>
+    <unit_char>char</unit_char>
+    <unit_cm>cm</unit_cm>
+    <unit_in>in</unit_in>
+    <unit_issue>issue</unit_issue>
+    <unit_mm>mm</unit_mm>
+    <unit_page>page</unit_page>
+    <unit_pc>pica</unit_pc>
+    <unit_pt>point</unit_pt>
+    <unit_px>pixel</unit_px>
+    <unit_record>record</unit_record>
+    <unit_vol>vol</unit_vol>
+    <unit_vu>MEI virtual unit</unit_vu>
+
+
+    <!-- Keys / modes -->
+    <major>major</major>
+    <minor>minor</minor>
+    <dorian>dorian</dorian>
+    <phrygian>phrygian</phrygian>
+    <lydian>lydian</lydian>
+    <mixolydian>mixolydian</mixolydian>
+    <aeolian>aeolian</aeolian>
+    <locrian>locrian</locrian>
+    
+    
     <!-- User interface texts -->
     <hide_alt_lang>Hide alternative languages</hide_alt_lang>
     <show_alt_lang>Show alternative languages</show_alt_lang>
